src/test/resources/type_error/TODO/NewLongArrayExpression.java
class NewLongArrayExpressionTest {
    public static void main(String[] args) {
        int i;
        int[] ia;
        long l;
        long[] la;
        boolean b;
        A cA;
        B cB;
    }
}
class A {}
class B {}
